gccida/c3/finalize_type_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1763:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1764:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1765:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1767:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1768:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1769:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1770:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1771:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1772:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1783:12: error: use of undeclared identifier 'unk_740000'
&& ( v4 = &unk_740000, _bittest64( ( const __int64 *)&v4, v3)) ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/stor-layout.c:1791:42: error: use of undeclared identifier 'machine_mode'
type->type.align = get_mode_alignment( ( machine_mode)v2); 
                                         ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finalize_type_size/src/obj/stor-layout.o] Error 1
